Prevent text from covering 'x' link

--- a/wiki/src/install/inc/stylesheets/assistant.css
+++ b/wiki/src/install/inc/stylesheets/assistant.css
@@ -241,7 +241,7 @@ td, th {
   border: 1px solid #0A0;
   -webkit-box-shadow: 5px 5px #0A0;
   box-shadow: 5px 5px #0A0;
-  padding: 10px;
+  padding: 15px 30px;
   margin-left: auto;
   margin-right: auto;
   margin-top: -5px;
